--- a/ZodiacChart/app/src/main/AndroidManifest.xml
+++ b/ZodiacChart/app/src/main/AndroidManifest.xml
@@ -17,7 +17,8 @@
             </intent-filter>
         </activity>
         <activity android:name=".HuangLiActivity" />
-        <activity android:name=".HoroscopeActivity"></activity>
+        <activity android:name=".HoroscopeActivity" />
+        <activity android:name=".DesignViewActivity"></activity>
     </application>
 
 </manifest>
